# medLembrete

./: README.md  app.py  ci.yml  pyproject.toml  test_app.py
src/: api_remedios.py
tests/: test_app.py  test_integracao_api.py
